Use Files.readString
GitOrigin-RevId: e04a381d51c2c755659edf276182cd8372d76391