@@ -16,7 +16,6 @@ import org.jetbrains.annotations.NotNull;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.Set;
@@ -78,7 +77,7 @@ public class DataFlowInspectionTrackerTest extends LightJavaCodeInsightFixtureTe
                    actualFile.substring(end + diff);
       String expectedFile;
       try {
-        expectedFile = new String(Files.readAllBytes(Paths.get(origPath)), StandardCharsets.UTF_8);
+        expectedFile = Files.readString(Paths.get(origPath));
       }
       catch (IOException e) {
         throw new UncheckedIOException(e);
